chore(test): update personalEventServiceTest #94